--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-SQLAlchemy==1.2.7
-Flask==1.0.2
-Flask-Cors==3.0.4
-pandas==1.0.3
-psycopg2==2.8.4
+Flask==1.1.2
+SQLAlchemy==1.3.17
+psycopg2-binary
+requests==2.23.0
+beautifulsoup4==4.7.1
 gunicorn==20.0.4
+pandas==1.0.3
